--- a/AspNetCoreSecurity/AspNetCoreSecurity.csproj
+++ b/AspNetCoreSecurity/AspNetCoreSecurity.csproj
@@ -6,6 +6,7 @@
     </PropertyGroup>
     
     <ItemGroup>
+        <PackageReference Include="Duende.IdentityServer" Version="6.0.4" />
         <PackageReference Include="Microsoft.AspnetCore.Authentication.Google" Version="6.0.0" />
     </ItemGroup>
 
