--- a/AspNetCoreSecurity/AspNetCoreSecurity.csproj
+++ b/AspNetCoreSecurity/AspNetCoreSecurity.csproj
@@ -8,6 +8,7 @@
     <ItemGroup>
         <PackageReference Include="Duende.IdentityServer" Version="6.0.4" />
         <PackageReference Include="Microsoft.AspnetCore.Authentication.Google" Version="6.0.0" />
+        <PackageReference Include="sustainsys.saml2.aspnetcore2" Version="2.9.0" />
     </ItemGroup>
 
 </Project>
